--- a/bin/install
+++ b/bin/install
@@ -14,7 +14,7 @@ if (!engine) {
     exitWithError('Missing VSCode engine declaration in package.json.');
 }
 
-var vscodeDtsTypescriptPath = path.join(path.dirname(__dirname), 'vscode.d.ts');
+var vscodeDtsTypescriptPath = path.join(path.dirname(__dirname), 'sqlops.d.ts');
 
 console.log('Detected VS Code engine version: ' + engine);
 
@@ -44,7 +44,7 @@ getURLMatchingEngine(engine, function (_, data) {
 function vscodeDtsToTypescript(contents) {
     var markerHit = false;
     var lines = contents.split('\n').filter(function (line) {
-        if (!markerHit && (line === '// when used for JS*' || line === 'declare module \'vscode\' {')) {
+        if (!markerHit && (line === '// when used for JS*' || line === 'declare module \'sqlops\' {')) {
             markerHit = true;
         }
 
@@ -52,7 +52,7 @@ function vscodeDtsToTypescript(contents) {
     });
 
     lines.unshift('/// <reference path="./thenable.d.ts" />');
-    lines.push('export = vscode;'); // this is to enable TS module resolution support
+    lines.push('export = sqlops;'); // this is to enable TS module resolution support
 
     return lines.join('\n');
 }
