--- a/bin/install
+++ b/bin/install
@@ -40,9 +40,9 @@ getURLMatchingEngine(engine, function (_, data) {
 
 function getURLMatchingEngine(engine, callback) {
     if (!engine || engine === '*') {
-        // master
+        // main
         return callback(null, {
-            url: 'https://raw.githubusercontent.com/Microsoft/azuredatastudio/master/src/sql/azdata.d.ts',
+            url: 'https://raw.githubusercontent.com/Microsoft/azuredatastudio/main/src/sql/azdata.d.ts',
             version: '*'
         });
     }
@@ -69,18 +69,18 @@ function getURLMatchingEngine(engine, callback) {
 
         var tag = minSatisfying(tags, engine);
 
-        // check if master is on the version specified
+        // check if main is on the version specified
         if (!tag) {
-            return shared.getContents('https://raw.githubusercontent.com/Microsoft/azuredatastudio/master/package.json', process.env.GITHUB_TOKEN, null, function (error, packageJson) {
+            return shared.getContents('https://raw.githubusercontent.com/Microsoft/azuredatastudio/main/package.json', process.env.GITHUB_TOKEN, null, function (error, packageJson) {
                 if (error) {
                     exitWithError(error);
                 }
 
                 var version = JSON.parse(packageJson).version;
                 if (semver.satisfies(version, engine)) {
-                    // master
+                    // main
                     return callback(null, {
-                        url: 'https://raw.githubusercontent.com/Microsoft/azuredatastudio/master/src/sql/azdata.d.ts',
+                        url: 'https://raw.githubusercontent.com/Microsoft/azuredatastudio/main/src/sql/azdata.d.ts',
                         version: version
                     });
                 }
@@ -91,7 +91,7 @@ function getURLMatchingEngine(engine, callback) {
                     version: '*'
                 });
 
-                // exitWithError('Could not find satifying Azure Data Studio for version ' + engine + ' in the tags: [' + tags.join(', ') + '] or on master: ' + version);
+                // exitWithError('Could not find satifying Azure Data Studio for version ' + engine + ' in the tags: [' + tags.join(', ') + '] or on main: ' + version);
             });
         }
 
